# vmecpp_large_cpp_tests

./: .gitattributes  README.md  TEST_HIERARCHY.md  test_input_file_consistency.py
common/fourier_basis_fast_poloidal/: BUILD.bazel  fourier_basis_fast_poloidal_test.cc
common/fourier_basis_fast_toroidal/: BUILD.bazel  fourier_basis_fast_toroidal_test.cc
common/sizes/: BUILD.bazel  sizes_test.cc
common/vmec_indata/: BUILD.bazel  vmec_indata_test.cc
free_boundary/mgrid_provider/: BUILD.bazel  mgrid_provider_test.cc
free_boundary/singular_integrals/: BUILD.bazel  singular_integrals_test.cc
free_boundary/surface_geometry/: BUILD.bazel  surface_geometry_test.cc
linking_current_test/: BUILD.bazel  linking_current_test.cc
test_data/: .gitignore  BUILD.bazel  BUILD.pants  README.md  axis_coefficients_cma.csv  axis_coefficients_cth_like_fixed_bdy.csv  axis_coefficients_solovev_analytical.csv  axis_coefficients_solovev_free_bdy.csv  axis_coefficients_w7x.csv  boundary_coefficients_cma.csv  boundary_coefficients_cth_like_fixed_bdy_nzeta_37.csv  boundary_coefficients_solovev.csv  boundary_coefficients_solovev_analytical.csv  boundary_coefficients_solovev_free_bdy.csv  coils.solovev  coils.w7x  cth_like_free_bdy.json  input.cma  input.cth_like_fixed_bdy  input.cth_like_fixed_bdy_nzeta_37  input.cth_like_free_bdy  input.solovev  input.solovev_analytical  input.solovev_free_bdy  input.solovev_no_axis  jxbout_cth_like_fixed_bdy.nc  jxbout_cth_like_fixed_bdy_nzeta_37.nc  jxbout_cth_like_free_bdy.nc  jxbout_solovev.nc  jxbout_solovev_analytical.nc  jxbout_solovev_free_bdy.nc  jxbout_solovev_no_axis.nc  makegrid_parameters_solovev.json  mercier.cma  mercier.cth_like_fixed_bdy  mercier.cth_like_free_bdy  mercier.solovev  mercier.solovev_analytical  mercier.solovev_free_bdy  mercier.solovev_no_axis  (+20 more)
test_data/cma/add_fluxes/: add_fluxes_00025_000001_02.cma.json  add_fluxes_00025_000002_02.cma.json  add_fluxes_00051_000001_01.cma.json  add_fluxes_00051_000002_01.cma.json
test_data/cma/bcontrav/: bcontrav_00025_000001_02.cma.json  bcontrav_00025_000002_02.cma.json  bcontrav_00051_000001_01.cma.json  bcontrav_00051_000002_01.cma.json
test_data/cma/bcov/: bcov_00025_000001_02.cma.json  bcov_00025_000002_02.cma.json  bcov_00051_000001_01.cma.json  bcov_00051_000002_01.cma.json
test_data/cma/bcov_full/: bcov_full_00025_000001_02.cma.json  bcov_full_00025_000002_02.cma.json  bcov_full_00051_000001_01.cma.json  bcov_full_00051_000002_01.cma.json
test_data/cma/bcovar_fileout/: bcovar_fileout_00051_000000_01.cma.json
test_data/cma/bss/: bss_00051_000000_01.cma.json
test_data/cma/calc_fbal/: calc_fbal_00025_000001_02.cma.json  calc_fbal_00025_000002_02.cma.json  calc_fbal_00051_000001_01.cma.json  calc_fbal_00051_000002_01.cma.json
test_data/cma/constraint_force/: constraint_force_00025_000001_02.cma.json  constraint_force_00025_000002_02.cma.json  constraint_force_00051_000001_01.cma.json  constraint_force_00051_000002_01.cma.json
test_data/cma/evolve/: evolve_00025_000001_02.cma.json  evolve_00025_000002_02.cma.json  evolve_00051_000001_01.cma.json  evolve_00051_000002_01.cma.json
test_data/cma/fixaray/: fixaray_00000_000001_01.cma.json
test_data/cma/forceNorms_tcon/: forceNorms_tcon_00025_000001_02.cma.json  forceNorms_tcon_00051_000001_01.cma.json
test_data/cma/forces/: forces_00025_000001_02.cma.json  forces_00025_000002_02.cma.json  forces_00051_000001_01.cma.json  forces_00051_000002_01.cma.json
test_data/cma/fsq/: fsq_00025_000001_02.cma.json  fsq_00025_000002_02.cma.json  fsq_00051_000001_01.cma.json  fsq_00051_000002_01.cma.json
test_data/cma/fsq1/: fsq1_00025_000001_02.cma.json  fsq1_00025_000002_02.cma.json  fsq1_00051_000001_01.cma.json  fsq1_00051_000002_01.cma.json
test_data/cma/funct3d_geometry/: funct3d_geometry_00025_000001_01.cma.json  funct3d_geometry_00025_000001_02.cma.json  funct3d_geometry_00025_000002_02.cma.json  funct3d_geometry_00051_000001_01.cma.json  funct3d_geometry_00051_000002_01.cma.json
test_data/cma/guess_axis/: guess_axis_00025_000001_01.cma.json
test_data/cma/interp/: interp_00051_000001_01.cma.json
test_data/cma/jacobian/: jacobian_00025_000001_01.cma.json  jacobian_00025_000001_02.cma.json  jacobian_00025_000002_02.cma.json  jacobian_00051_000001_01.cma.json  jacobian_00051_000002_01.cma.json
test_data/cma/jxbforce_bsub_lowpass/: jxbforce_bsub_lowpass_00051_000000_01.cma.json
test_data/cma/jxbout/: jxbout_00051_000000_01.cma.json
test_data/cma/lambda_forces/: lambda_forces_00025_000001_02.cma.json  lambda_forces_00025_000002_02.cma.json  lambda_forces_00051_000001_01.cma.json  lambda_forces_00051_000002_01.cma.json
test_data/cma/lamcal/: lamcal_00025_000001_02.cma.json  lamcal_00051_000001_01.cma.json
test_data/cma/lulv_comb/: lulv_comb_00025_000001_02.cma.json  lulv_comb_00025_000002_02.cma.json  lulv_comb_00051_000001_01.cma.json  lulv_comb_00051_000002_01.cma.json
test_data/cma/mercier/: mercier_00051_000000_01.cma.json
test_data/cma/metric/: metric_00025_000001_02.cma.json  metric_00025_000002_02.cma.json  metric_00051_000001_01.cma.json  metric_00051_000002_01.cma.json
test_data/cma/multigrid_result/: multigrid_result_00025_000218_00.cma.json  multigrid_result_00051_000207_00.cma.json
test_data/cma/phys_gc/: phys_gc_00025_000001_02.cma.json  phys_gc_00025_000002_02.cma.json  phys_gc_00051_000001_01.cma.json  phys_gc_00051_000002_01.cma.json
test_data/cma/precondn/: precondn_00025_000001_02.cma.json  precondn_00051_000001_01.cma.json
test_data/cma/printout/: printout_00025_000001_02.cma.json  printout_00051_000001_01.cma.json
test_data/cma/profil1d/: profil1d_00025_000001_00.cma.json  profil1d_00051_000001_00.cma.json
test_data/cma/volume/: volume_00025_000001_02.cma.json  (+3 more)
vmec/ideal_mhd_model/: BUILD.bazel  ideal_mhd_model_hot_restart_test.cc  ideal_mhd_model_test.cc
vmec/output_quantities/: BUILD.bazel  output_quantities_test.cc
vmec/radial_profiles/: BUILD.bazel  radial_profiles_test.cc
vmec/vmec/: BUILD.bazel  vmec_test.cc
vmec_hot_restart_test/: BUILD.bazel  vmec_hot_restart_test.cc
(+986 files in other folders)
