# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
filegroup(
    name = "solovev",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_solovev.csv",
        "boundary_coefficients_solovev.csv",
        "jxbout_solovev.nc",
        "mercier.solovev",
        "threed1.solovev",
        "solovev.out.h5",
    ] + glob(["solovev/**/*.json"]),
)

filegroup(
    name = "solovev_analytical",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_solovev_analytical.csv",
        "boundary_coefficients_solovev_analytical.csv",
        "jxbout_solovev_analytical.nc",
        "mercier.solovev_analytical",
        "threed1.solovev_analytical",
    ] + glob(["solovev_analytical/**/*.json"]),
)

filegroup(
    name = "solovev_no_axis",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_solovev_no_axis.csv",
        "boundary_coefficients_solovev_no_axis.csv",
        "jxbout_solovev_no_axis.nc",
        "mercier.solovev_no_axis",
        "threed1.solovev_no_axis",
    ] + glob(["solovev_no_axis/**/*.json"]),
)

filegroup(
    name = "cth_like_fixed_bdy",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_cth_like_fixed_bdy.csv",
        "boundary_coefficients_cth_like_fixed_bdy.csv",
        "jxbout_cth_like_fixed_bdy.nc",
        "mercier.cth_like_fixed_bdy",
        "threed1.cth_like_fixed_bdy",
        "cth_like_fixed_bdy.out.h5",
    ] + glob(["cth_like_fixed_bdy/**/*.json"]),
)

filegroup(
    name = "cth_like_fixed_bdy_nzeta_37",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_cth_like_fixed_bdy_nzeta_37.csv",
        "boundary_coefficients_cth_like_fixed_bdy_nzeta_37.csv",
        "jxbout_cth_like_fixed_bdy_nzeta_37.nc",
        "mercier.cth_like_fixed_bdy_nzeta_37",
        "threed1.cth_like_fixed_bdy_nzeta_37",
    ] + glob(["cth_like_fixed_bdy_nzeta_37/**/*.json"]),
)

filegroup(
    name = "cma",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_cma.csv",
        "boundary_coefficients_cma.csv",
        "mercier.cma",
        "threed1.cma",
    ] + glob(["cma/**/*.json"]),
)

filegroup(
    name = "cth_like_free_bdy",
    visibility = ["//visibility:public"],
    srcs = [
        "axis_coefficients_cth_like_free_bdy.csv",
        "boundary_coefficients_cth_like_free_bdy.csv",
        "jxbout_cth_like_free_bdy.nc",
        "mercier.cth_like_free_bdy",
        "threed1.cth_like_free_bdy",
    ] + glob(["cth_like_free_bdy/**/*.json"]),
)

filegroup(
    name = "w7x",
    visibility = ["//visibility:public"],
    srcs = [
        "coils.w7x",
        "axis_coefficients_w7x.csv",
    ],
)
