# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_test(
    name = "fourier_basis_fast_toroidal_test",
    srcs = ["fourier_basis_fast_toroidal_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:solovev_analytical",
        "//vmecpp/test_data:solovev_no_axis",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp/test_data:cma",
        "//vmecpp/test_data:cth_like_free_bdy",
        "//vmecpp_large_cpp_tests/test_data:solovev",
        "//vmecpp_large_cpp_tests/test_data:solovev_analytical",
        "//vmecpp_large_cpp_tests/test_data:solovev_no_axis",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp_large_cpp_tests/test_data:cma",
        "//vmecpp_large_cpp_tests/test_data:cth_like_free_bdy",
    ],
    deps = [
        "//vmecpp/common/fourier_basis_fast_toroidal",
        "@googletest//:gtest_main",
        "@nlohmann_json//:json",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
        "//vmecpp/common/util:util",
        "//vmecpp/common/sizes:sizes",
        "@abseil-cpp//absl/algorithm:container",
    ],
    size = "small",
)
