# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_test(
    name = "surface_geometry_test",
    srcs = ["surface_geometry_test.cc"],
    data = [
        "//vmecpp/test_data:cth_like_free_bdy",
        "//vmecpp_large_cpp_tests/test_data:cth_like_free_bdy",
    ],
    deps = [
        "//vmecpp/free_boundary/surface_geometry",
        "@googletest//:gtest_main",
        "@abseil-cpp//absl/log:log",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
        "//vmecpp/vmec/vmec:vmec",
        "//vmecpp/free_boundary/surface_geometry_mockup:surface_geometry_mockup",
    ],
    size = "small",
)
