# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_test(
    name = "ideal_mhd_model_test",
    srcs = ["ideal_mhd_model_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:solovev_analytical",
        "//vmecpp/test_data:solovev_no_axis",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp/test_data:cma",
        "//vmecpp/test_data:cth_like_free_bdy",
        "//vmecpp_large_cpp_tests/test_data:solovev",
        "//vmecpp_large_cpp_tests/test_data:solovev_analytical",
        "//vmecpp_large_cpp_tests/test_data:solovev_no_axis",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp_large_cpp_tests/test_data:cma",
        "//vmecpp_large_cpp_tests/test_data:cth_like_free_bdy",
    ],
    deps = [
        "//vmecpp/vmec/ideal_mhd_model",
        "@googletest//:gtest_main",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
        "//vmecpp/vmec/vmec:vmec",
    ],
    size = "large",
)

cc_test(
    name = "ideal_mhd_model_hot_restart_test",
    srcs = ["ideal_mhd_model_hot_restart_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp_large_cpp_tests/test_data:solovev",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy",
    ],
    deps = [
        "//vmecpp/vmec/ideal_mhd_model",
        "@googletest//:gtest_main",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
        "//vmecpp/vmec/vmec:vmec",
    ],
)
