# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_test(
    name = "vmec_test",
    srcs = ["vmec_test.cc"],
    data = [
        "//vmecpp/test_data:solovev",
        "//vmecpp/test_data:solovev_no_axis",
        "//vmecpp/test_data:cth_like_fixed_bdy",
        "//vmecpp/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp/test_data:cma",
        "//vmecpp/test_data:cth_like_free_bdy",
        "//vmecpp_large_cpp_tests/test_data:solovev",
        "//vmecpp_large_cpp_tests/test_data:solovev_no_axis",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy",
        "//vmecpp_large_cpp_tests/test_data:cth_like_fixed_bdy_nzeta_37",
        "//vmecpp_large_cpp_tests/test_data:cma",
        "//vmecpp_large_cpp_tests/test_data:cth_like_free_bdy",
    ],
    deps = [
        "//vmecpp/vmec/vmec",
        "@googletest//:gtest_main",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
    ],
    size = "small",
)
